# ruserf

./: .codecov.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml  loc.yml
ci/: setup_subnet_macos.sh  setup_subnet_ubuntu.sh  setup_subnet_windows.ps1
core/: Cargo.toml
core/src/: broadcast.rs  channel.rs  clock.rs  coalesce.rs  codec.rs  coordinate.rs  delegate.rs  error.rs  event.rs  internal_query.rs  key_manager.rs  lib.rs  options.rs  query.rs  serf.rs  snapshot.rs  types.rs
core/src/coalesce/: member.rs  user.rs
core/src/delegate/: async.rs  composite.rs  merge.rs  reconnect.rs  transform.rs
core/src/event/: crate_event.rs  crate_level.rs
core/src/serf/: api.rs  async.rs  base.rs  delegate.rs  internal_query.rs  query.rs  tests.rs
core/src/serf/base/: tests.rs
core/src/serf/base/tests/: delegate.rs  internals.rs  serf.rs  snapshot.rs
core/src/serf/base/tests/serf/: delegate.rs  event.rs  join.rs  leave.rs  ping_delegate.rs  query.rs  reap.rs  reconnect.rs  remove.rs  snapshot.rs
core/src/serf/tests/: delegate.rs  internals.rs  query.rs  serf.rs  snapshot.rs
core/src/serf/tests/serf/: leave.rs  reconnect.rs
core/src/snapshot/: tests.rs
core/src/types/: clock.rs  filter.rs  join.rs  key.rs  leave.rs  member.rs  message.rs  push_pull.rs  query.rs  tags.rs  user_event.rs
ruserf/: Cargo.toml
ruserf/src/: async_std.rs  lib.rs  smol.rs  tokio.rs
ruserf/test/: main.rs
ruserf/test/main/: net.rs  quic.rs
ruserf/test/main/net/: join.rs  stats.rs  update.rs
ruserf/test/main/net/event/: event_user.rs  event_user_size_limit.rs  events_failed.rs  events_leave.rs  query_same_clock.rs  query_size_limit.rs  remove_failed_events_leave.rs  should_process.rs
ruserf/test/main/net/join/: intent_buffer_early.rs  intent_newer.rs  intent_old_message.rs  join_cancel.rs  join_ignore_old.rs  join_leave.rs  leave_ltime.rs  pending_intent.rs
ruserf/test/main/net/leave/: force_leave_leaving.rs  force_leave_left.rs  intent_newer.rs  snapshot_recovery.rs
ruserf/test/main/net/reap/: handler.rs
ruserf/test/main/net/remove/: failed_node_ourself.rs  failed_node_prune.rs
ruserf/test/main/net/snapshot/: snapshoter.rs  snapshoter_force_compact.rs  snapshoter_leave.rs  snapshoter_leave_rejoin.rs  snapshoter_recovery.rs
ruserf/test/main/quic/: coordinates.rs  leave.rs  local_member.rs  name_resolution.rs  num_nodes.rs  reconnect.rs  role.rs  set_tags.rs  snapshot.rs  update.rs
ruserf/test/main/quic/delegate/: local_state.rs  ping_delegate.rs
ruserf/test/main/quic/join/: intent_buffer_early.rs  intent_old_message.rs  intent_reset_leaving.rs  join_ignore_old.rs  join_leave.rs  leave_ltime.rs
ruserf/test/main/quic/leave/: force_leave_failed.rs  force_leave_leaving.rs  intent_buffer_early.rs  intent_old_message.rs  rejoin_different_role.rs  snapshot_recovery.rs
ruserf/test/main/quic/reconnect/: reconnect.rs
ruserf/test/main/quic/remove/: failed_node_ourself.rs
ruserf/test/main/quic/snapshot/: snapshoter.rs  snapshoter_force_compact.rs  snapshoter_leave_rejoin.rs
ruserf/tests/: main.rs
ruserf/tests/main/: TODO.md  net.rs  quic.rs
ruserf/tests/main/net/: delegate.rs  local_member.rs  name_resolution.rs  reap.rs  remove.rs  role.rs  write_keyring_file.rs
ruserf/tests/main/net/delegate/: nodemeta.rs  ping_delegate.rs  remote_state.rs
ruserf/tests/main/net/event/: default_query.rs  events_join.rs  events_leave_avoid_infinite_rebroadcast.rs  query.rs  query_deduplicate.rs  query_filter.rs  query_old_message.rs  query_params_encode_filters.rs  query_size_limit_increased.rs  user_event_old_message.rs  user_event_same_clock.rs
ruserf/tests/main/net/join/: intent_reset_leaving.rs  join_leave_join.rs  pending_intents.rs
ruserf/tests/main/net/leave/: intent_buffer_early.rs  intent_old_message.rs  rejoin_different_role.rs
ruserf/tests/main/net/reap/: reap.rs
ruserf/tests/main/net/reconnect/: reconnect.rs  same_ip.rs  timeout.rs
ruserf/tests/main/quic/: coordinates.rs  event.rs  get_queue_max.rs  name_resolution.rs  num_nodes.rs  set_tags.rs  state.rs  stats.rs  update.rs
ruserf/tests/main/quic/delegate/: local_state.rs  nodemeta.rs  remote_state.rs
ruserf/tests/main/quic/join/: intent_newer.rs  join_cancel.rs  join_leave_join.rs  pending_intent.rs  pending_intents.rs
ruserf/tests/main/quic/leave/: force_leave_failed.rs  force_leave_left.rs  intent_newer.rs  snapshot_recovery.rs
ruserf/tests/main/quic/reap/: handler.rs  handler_shutdown.rs  reap.rs
ruserf/tests/main/quic/reconnect/: reconnect.rs  same_ip.rs  timeout.rs
ruserf/tests/main/quic/remove/: failed_node.rs  failed_node_prune.rs
ruserf/tests/main/quic/snapshot/: snapshoter_leave.rs  snapshoter_recovery.rs
traits/: Cargo.toml
types/: Cargo.toml
types/src/: clock.rs  filter.rs  join.rs  key.rs  leave.rs  lib.rs  member.rs  message.rs  push_pull.rs  query.rs  tags.rs  user_event.rs  version.rs
