[workspace]
members = [
  "core",
  "ruserf",
  "types"
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.75.0"
description = "A decentralized solution for service discovery and orchestration that is lightweight, highly available, and fault tolerant."
repository = "https://github.com/al8n/ruserf"
homepage = "https://github.com/al8n/ruserf"
license = "MPL-2.0"

[workspace.dependencies]
byteorder = "1"
derive_more = "0.99"
futures = "=0.3.29"
serde = { version = "1", features = ["derive"] }
humantime-serde = "1"
indexmap = "2"
thiserror = "1"
viewit = "0.1.5"
smol_str = "0.2"
smallvec = "1"
ruserf-types = { path = "types", version = "0.0.0" }
rand = "0.8"
