[package]
name = "ruserf-core"
version = { workspace = true } 
edition = { workspace = true }
license = { workspace = true }
description = "A placeholder"

[features]
default = ["metrics", "async-graphql"]
metrics = ["memberlist-core/metrics", "dep:metrics"]
encryption = ["memberlist-core/encryption"]

async-graphql = ["dep:async-graphql"]

serde = ["dep:serde", "dep:humantime-serde", "memberlist-core/serde"]

[dependencies]
atomic = "0.6"
arc-swap = "1.6"
async-lock = "3"
async-channel = "2"
async-graphql = { version = "7", optional = true }
base64 = "0.22"
bitflags = "2.3"
bytemuck = { version = "1", features = ["derive"] }
derive_more.workspace = true
futures.workspace = true
either = "1.9"
indexmap = { version = "2", features = ["serde"] }
once_cell = "1.18" # remove this dependency when [feature(lazy_cell)] is stabilized
pin-project-lite = "0.2"
pollster = "0.3"
parking_lot = { version = "0.12", features = ["send_guard"] }
rand = "0.8"
regex = "1.7"
# rmp-serde = { version = "1.1" }
# rkyv = { version = "0.7", features = ["validation", "archive_be"] }
scopeguard = "1"
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
serde_json = "1"
smol_str = { version = "0.2", features = ["serde"] }
smallvec = { version = "1.10", features = ["serde"] }
memberlist-core = { path = "../../memberlist/core", default-features = false }

metrics = { version = "0.22", optional = true }

thiserror = "1"
viewit = "0.1.5"

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
