[package]
name = "ruserf-core"
version = { workspace = true } 
edition = { workspace = true }
license = { workspace = true }
description = "A placeholder"

[features]
default = ["metrics", "async-graphql"]
metrics = ["memberlist-core/metrics", "dep:metrics"]
encryption = ["memberlist-core/encryption", "ruserf-types/encryption", "base64"]

async-graphql = ["dep:async-graphql"]

serde = [
  "dep:serde",
  "dep:humantime-serde",
  "memberlist-core/serde",
  "ruserf-types/serde",
  "smol_str/serde",
  "smallvec/serde",
  "indexmap/serde",
]

[dependencies]
atomic = "0.6"
arc-swap = "1"
async-lock = "3"
async-channel = "2"
async-graphql = { version = "7", optional = true }

bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
derive_more.workspace = true
futures.workspace = true
either = "1"
indexmap.workspace = true
once_cell = "1" # remove this dependency when [feature(lazy_cell)] is stabilized
parking_lot = { version = "0.12", features = ["send_guard"] }
rand = "0.8"
regex = "1"
scopeguard = "1"
smol_str.workspace = true
smallvec.workspace = true
thiserror.workspace = true
viewit.workspace = true

memberlist-core = { path = "../../memberlist/core", default-features = false }

ruserf-types.workspace = true

metrics = { version = "0.22", optional = true }

serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
serde_json = "1"

base64 = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]