[package]
name = "ruserf"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["tokio", "compression", "encryption", "dns", "tcp", "quic"]

tokio = ["memberlist/tokio"]
async-std = ["memberlist/async-std"]
smol = ["memberlist/smol"]

serde = [
  "memberlist/serde",
  "ruserf-core/serde",
]

metrics = [
  "memberlist/metrics",
  "ruserf-core/metrics",
]

compression = ["memberlist/compression"]

encryption = ["memberlist/encryption", "ruserf-core/encryption"]

quic = ["memberlist/quic"]
quinn = ["memberlist/quinn"]
s2n = ["memberlist/s2n"]

net = ["memberlist/net"]
tcp = ["net"]
tls = ["memberlist/tls"]
native-tls = ["memberlist/native-tls"]

# enable DNS node address resolver
dns = ["memberlist/dns"]
dns-over-quic = [
  "memberlist/dns-over-quic",
]
dns-over-h3 = ["memberlist/dns-over-h3"]
dns-over-https-rustls = [
  "memberlist/dns-over-https-rustls",
]
dns-over-rustls = [
  "memberlist/dns-over-rustls",
]
dns-over-openssl = [
  "memberlist/dns-over-openssl",
]
dns-over-native-tls = [
  "memberlist/dns-over-native-tls",
]
dns-webpki-roots = [
  "memberlist/dns-webpki-roots",
]
dns-native-certs = [
  "memberlist/dns-native-certs",
]
dnssec-openssl = [
  "memberlist/dnssec-openssl",
]
dnssec-ring = ["memberlist/dnssec-ring"]
dnssec = ["memberlist/dnssec"]

test = ["memberlist/test", "ruserf-core/test"]

[dependencies]
memberlist.workspace = true
ruserf-core = { workspace = true, default-features = false }
