[package]
name = "ruserf-types"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
description = "Types for the `ruserf` crate"

[features]
encryption = ["memberlist-types/encryption", "futures"]
serde = ["dep:serde", "indexmap/serde", "memberlist-types/serde", "smol_str/serde", "bitflags/serde"]

[dependencies]
bitflags = "2"
byteorder.workspace = true
bytemuck = { version = "1", features = ["derive"] }
derive_more.workspace = true
futures = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
indexmap.workspace = true
memberlist-types = { path = "../../memberlist/types" }
smol_str.workspace = true
transformable = { version = "0.1", features = ["async"] }
thiserror.workspace = true
viewit.workspace = true

serde = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
futures = { workspace = true, features = ["executor"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]